# sca-benchmark

./: README.md  pyproject.toml
src/sca_benchmark/: basic_import.py  built_in_functions.py  dynamic_import_exec.py  dynamic_import_imp.py  dynamic_import_importlib.py  import_all.py  import_specific.py  import_submodule.py  import_with_alias.py  sys_path_import.py
src/sca_benchmark/relative_import/: parent_module.py  sibling_module.py
tests/: test_basic_import.py
