[project]
name = "sca-benchmark"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jonathan Harper", email = "39912347+jharper-sec@users.noreply.github.com" }
]
dependencies = [
    "aiohttp==3.8.4",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sca_benchmark"]
